# fastapi-bc

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.py
migrations/: env.py
migrations/versions/: 3328e8df4089_add_password_hash.py  77dc7baa3806_init.py
routers/: book_router.py
src/: __init__.py  config.py  lifespan.py
src/auth/: auth_router.py  auth_schemas.py  dependencies.py  models.py  services.py  utils.py
src/books/: __init__.py  book_router.py  book_schema.py  data.py  models.py  service.py
src/db/: main.py
