[project]
name = "fastapi-sa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.39",
]
